[package]
name = "my_project"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "my_project"
path = "main.rs"

[dependencies]
once_cell = "1.8.0"
plotters-bitmap = "0.3"
iced_native = "0.3"
tokio = { version = "1", features = ["full"] }
iced = { version = "0.12", features = ["canvas", "tokio"] }
pnet = "0.34.0"
pcap = "0.8"
if-addrs = "0.6.5"
regex = "1.5.4"
sysinfo = "0.30.12"
plotters-iced = "0.10"
plotters = "0.3"
chrono = "0.4"
plotters-backend = "0.3"
